--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@ To change this template, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html>
+<html data-ng-app>
     <head>
         <title>JS Test</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,20 +12,23 @@ and open the template in the editor.
         <div title="a">
             <script src="http://codeorigin.jquery.com/jquery-2.0.3.js"></script>
             <!-- TOBE remotes START -->
-            <script src="js/libs/namespace.js"></script>
+            <script src="js/libs/angular-1.2.0-rc.2/angular.js"></script>
             <script src="js/libs/cids.js"></script>
-            <script src="js/libs/pure_rest_backend.js"></script>
+            <script src="js/libs/ng_http_backend.js"></script>
+            <script src="js/libs/namespace.js"></script>
             <script src="js/libs/tools.js"></script>
             <!-- TOBE remotes END -->
             <script src="js/scenario-evolution-widget-core.js"></script>
             <script type="text/javascript">
-                var sew = de.cismet.crisma.scenario_evolution_widget;
-                var widget = sew.createWidget(document.getElementById('body'), 'crisma');
-                widget.setBackend(ci);
-                
-                console.log(widget.getDefaultDomain());
-                
-                widget.setWorldstate(50);
+                setTimeout(function() {
+                    var sew = de.cismet.crisma.scenario_evolution_widget;
+                    var widget = sew.createWidget(document.getElementById('body'), 'crisma');
+                    widget.setBackend(ci);
+
+                    console.log(widget.getDefaultDomain());
+
+                    widget.setWorldstate(50);
+                }, 100);
             </script>
         </div>
     </body>
