altered dependencies to remotes, altered widget behaviour so that it won't do anything if the already set worldstate is set again

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,12 +11,10 @@ and open the template in the editor.
     <body id="body">
         <div title="a">
             <script src="http://codeorigin.jquery.com/jquery-2.0.3.js"></script>
-            <!-- TOBE remotes START -->
-            <script src="js/libs/Namespace.js"></script>
-            <script src="js/libs/cids.js"></script>
-            <script src="js/libs/pure_rest_backend.js"></script>
-            <script src="js/libs/Tools.js"></script>
-            <!-- TOBE remotes END -->
+            <script src="http://crisma.cismet.de/lib/js/de/cismet/Namespace/snapshot/Namespace.js"></script>
+            <script src="http://crisma.cismet.de/lib/js/de/cismet/cids/cids.js"></script>
+            <script src="http://crisma.cismet.de/lib/js/de/cismet/cids/pure_rest_backend.js"></script>
+            <script src="http://crisma.cismet.de/lib/js/de/cismet/Tools/snapshot/Tools.js"></script>
             <script src="js/scenario-evolution-widget-core.js"></script>
             <script type="text/javascript">
                 var sew = de.cismet.crisma.Scenario_evolution_widget;
